<resources>

    <string name="app_name">SmartPlugApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="network_on">network on</string>
    <string name="network_off">network off</string>
    <string name="light_on">light on</string>
    <string name="light_off">light off</string>

</resources>